--- a/utils_lint/aar/build.gradle
+++ b/utils_lint/aar/build.gradle
@@ -39,8 +39,9 @@ task androidJar(type: Jar, dependsOn: assemble) {
 
 dependencies {
 
-    api project(':utils')
+//    api project(':utils')
+    api project(':')
 
-    lintChecks project(':utils:utils_lint')
-    lintPublish project(':utils:utils_lint')
+    lintChecks project(':utils_lint')
+    lintPublish project(':utils_lint')
 }
