--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,44 @@
+buildscript {
+    ext.kotlin_version = '1.3.72'
+
+    def cmd = 'git rev-list HEAD --count --first-parent'
+    ext.version_code = cmd.execute().text.trim().toInteger()
+    ext.version_suffix = 'git rev-parse --short HEAD'.execute().text.trim()
+    ext.version_name = (version_code / 100).toInteger() + ".${version_code}-${version_suffix}"
+
+    ext.versions = [
+            'androidTools': '27.0.0',
+    ]
+
+    ext.deps = [
+            'lint': [
+                    'core'  : "com.android.tools.lint:lint:${versions.androidTools}",
+                    'api'   : "com.android.tools.lint:lint-api:${versions.androidTools}",
+                    'checks': "com.android.tools.lint:lint-checks:${versions.androidTools}",
+                    'tests' : "com.android.tools.lint:lint-tests:${versions.androidTools}",
+            ],
+    ]
+
+    repositories {
+        google()
+        jcenter()
+
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+
+    }
+}
+
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
@@ -7,7 +48,7 @@ dependencies {
     compileOnly deps.lint.api
     compileOnly deps.lint.checks
 //    lintPublish project(':log_lint')
-    implementation project(':utils:utils_lint')
+//    implementation project(':utils_lint')
 }
 
 sourceCompatibility = "1.7"
