--- a/build.gradle
+++ b/build.gradle
@@ -51,5 +51,5 @@ dependencies {
 //    implementation project(':utils_lint')
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
