add EMPTY_LINE to print
Signed-off-by: hello <hello@ifnot.cc>

--- a/utils_lint/aar/build.gradle
+++ b/utils_lint/aar/build.gradle
@@ -40,7 +40,7 @@ task androidJar(type: Jar, dependsOn: assemble) {
 dependencies {
 
 //    api project(':utils')
-    api project(':')
+//    api project(':')
 
     lintChecks project(':utils_lint')
     lintPublish project(':utils_lint')
