--- a/utils_lint/build.gradle
+++ b/utils_lint/build.gradle
@@ -6,8 +6,8 @@ dependencies {
     compileOnly deps.lint.core
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 jar {
     manifest {
