--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ allprojects {
 
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'maven'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
